--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for Community Help Portal",
   "main": "server.js",
   "scripts": {
+    "test": "mocha",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "prod": "NODE_ENV=production node server.js"
@@ -16,7 +17,8 @@
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "task-manager": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
