--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
     "prod": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "chai": "^4.5.0",
+    "chai-http": "^4.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -21,6 +23,8 @@
     "task-manager": "file:.."
   },
   "devDependencies": {
+    "esm": "^3.2.25",
+    "chai-http": "^5.1.2",
     "mocha": "^11.0.1",
     "nodemon": "^3.1.10",
     "sinon": "^21.0.0"
